--- a/VPCandEC2/infrastructure.yaml
+++ b/VPCandEC2/infrastructure.yaml
@@ -7,7 +7,7 @@ Parameters:
     AllowedPattern: "(\\d{1,3})\\.(\\d{1,3})\\.(\\d{1,3})\\.(\\d{1,3})/(\\d{1,2})"
     ConstraintDescription: Must be a valid CIDR range in the form x.x.x.x/24
     Default: 10.7.161.0/24
-  psharedacidr:
+  sharedacidr:
     Type: String
     MinLength: 9
     MaxLength: 18
@@ -32,7 +32,7 @@ Resources:
     Type: "AWS::EC2::Subnet"
     Properties:
       AvailabilityZone: !Select [0, !GetAZs ] # Selects 1st AZ 1 = 2nd 2 = 3rd if region has less adjust accordingly
-      CidrBlock: !Ref psharedacidr
+      CidrBlock: !Ref sharedacidr
       MapPublicIpOnLaunch: true
       VpcId: !Ref VPC
 
